# silero-tts-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.cuda  Makefile  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docker.txt  requirements_test.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker-ghcr.yml
app/: handlers.py  logger.py  tts_engine.py
configs/: README.md
docs/: audit-report.md  refactor-plan.md  repo-structure.md
docs/adr/: 0001-openai-compatible-contract.md  0002-mock-engine-for-ci.md
docs/releases/: v1.0.0.md
scripts/: smoke_openai_tts.sh
tests/: test_openai_api.py  test_tts_text_normalization.py
