[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "silero-tts-service"
version = "0.1.0"
description = "OpenAI-compatible TTS service based on Silero models."
requires-python = ">=3.10,<3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "C90"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 14

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
files = ["app", "main.py"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
